test_suite/tests/ui/identifier/other_untagged.stderr
error: #[serde(other)] cannot appear on untagged enum
 --> $DIR/other_untagged.rs:7:5
  |
7 | /     #[serde(other)]
8 | |     Other,
  | |_________^

error: aborting due to previous error

